--- a/agent/package.json
+++ b/agent/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@langchain/core": "^0.1.0",
-    "@langchain/openai": "^0.0.1",
-    "express": "^4.17.1"
+    "@langchain/openai": "^0.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
