Fixes for dockercompose and agent package.json

--- a/agent/package.json
+++ b/agent/package.json
@@ -9,6 +9,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "@langchain/core": "^0.1.0",
     "@langchain/openai": "^0.0.1"
   },
